# arc-purple

./: README.md  meson.build  meson_options.txt
common/: meson.build
common/gtk-2.0/: meson.build
common/gtk-3.0/assets/: assets.txt
common/gtk-3.0/sass/: _applications.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _lightdm.scss  _transparent_widgets.scss
common/xfce-notify-4.0/: meson.build
common/xfce-notify-4.0/purple/: gtk.css
common/xfwm4/: meson.build
common/xfwm4/purple/: meson.build  themerc
